<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bookshelf"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/bookshelf"
            android:contentDescription="@string/bookshelf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/mail"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:autofillHints="emailAddress"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/bookshelf"
            />

        <EditText
            android:id="@+id/password"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/mail"
            />

        <Button
            android:id="@+id/btnConnection"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:text="@string/connexion"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>