<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".BookInfo">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRetour"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.8"
                android:scaleY="1.8"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="50dp"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/read"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="80dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/read" />

            <TextView
                android:id="@+id/title"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_above="@id/author" />

            <TextView
                android:id="@+id/author"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_alignTop="@id/card" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_marginTop="100dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:cardCornerRadius="8dp"
                app:cardElevation="15dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/book_img"
                    android:clickable="true"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_below="@id/card" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/date" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>